syntax = "proto3";

package him;
option go_package = "./him";
//消息最上层
message Pack {
    enum PackType{
			loginReq = 0;
			loginAck = 1;
			msgReq = 2;
			msgAck = 3;
			syncReq = 4;
			syncAck = 5;}
    PackType type = 1;
    bytes body = 2;
}
//设备登录
message LoginReq{
	string token = 1;
}
//登录回执
message LoginAck{
	int32 code = 1;
	string msg = 2;
	string userId = 3;
}
message Message{
	//会话类型
	int32  conversationType = 1;
	//消息类型
	int32 type = 2;
	//消息发送者
	UserInfo sender = 3;
	//消息接收者id
	string targetId = 4;
	//app端消息id
	string messageId = 5;
	//全局唯一id
	string messageUid = 6;
	//消息发送时间
	int64 sentTime = 7;
	//消息内容
	bytes content =8;
}

//文本消息
message TextElem{
	string content = 1;
}
//图片消息
message ImageElem{
	string url = 1;
}

//消息发送者信息
message UserInfo{
	string userId = 1;
	string nickName = 2;
	string avatar = 3;
}

//消息回执
message MessageAck{
	string messageId = 1;
	string messagedUid = 2;
}