syntax = "proto3";


package rpc;

option go_package = "rpc";
message MessagePushReq{
  string  channelId = 1;
  bytes   message = 2;
}
message MessagePushReply{

}

message MessageAckReq {
  string msgUid = 1;
}

message MessageAckReply{

}